src/objects/c2g__InquiryTemplateCommonName__c.object
<CustomObject>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>c2g__CommonName__c</fullName>
        <label>Common Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__DataviewField__c</fullName>
        <label>Dataview Field</label>
        <referenceTo>c2g__DataViewField__c</referenceTo>
        <relationshipLabel>Inquiry Template Common Names</relationshipLabel>
        <relationshipName>InquiryTemplateCommonNames</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__InquiryTemplate__c</fullName>
        <label>Inquiry Template</label>
        <referenceTo>c2g__InquiryTemplate__c</referenceTo>
        <relationshipLabel>Inquiry Template Common Names</relationshipLabel>
        <relationshipName>InquiryTemplateCommonNames</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>zDeprecated:Inquiry Template Common Name</label>
    <nameField>
        <displayFormat>ITCN-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inquiry Template Common Names</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>